@startuml

' JobPost Class
class JobPost {
    - jobId: String
    - jobTitle: String
    - jobDescription: String
    - resumes: List<Resume>
    + addResume(resume: Resume): void
    + getResumes(): List<Resume>
    + getJobTitle(): String
}

' Resume Class
class Resume {
    - resumeId: String
    - resumeText: String
    - imageUri: String
    - matchScore: float
    + getResumeText(): String
    + setMatchScore(score: float): void
}

' MatchResult Class
class MatchResult {
    - matchScore: float
    - matchedKeywords: List<String>
    - missingKeywords: List<String>
    + getMatchScore(): float
    + getMatchedKeywords(): List<String>
    + getMissingKeywords(): List<String>
}

' MatchScorer Class
class MatchScorer {
    + calculateMatch(jobDescription: String, resumeText: String): MatchResult
    + extractKeywords(text: String): List<String>
}

' JobStorage Class
class JobStorage {
    - jobPosts: List<JobPost>
    + addJobPost(jobPost: JobPost): void
    + getJobPosts(): List<JobPost>
    + getJobPostById(id: String): JobPost
}

' Relationships
JobPost "1" *-- "*" Resume : contains
JobStorage "1" *-- "*" JobPost : stores
MatchScorer "1" *-- "*" Resume : uses
MatchScorer "1" *-- "*" JobPost : uses
MatchResult "1" -- "*" JobPost : contains
MatchResult "1" -- "*" Resume : contains

@enduml
